Rewrite News Post Date Derivation to fix new year bugs